--- a/static/fonts/fonts.css
+++ b/static/fonts/fonts.css
@@ -18,6 +18,7 @@
 
 
 
+
 @font-face {
   font-family: "Verlag Condensed";
   src: url("vercomp/VerlagCond-Book.otf");
@@ -33,6 +34,40 @@
 @font-face {
   font-family: "Verlag Condensed";
   src: url("vercomp/VerlagCond-Black.otf");
+  font-weight: 700;
+}
+
+
+
+
+
+@font-face {
+  font-family: "Operator";
+  src: url("operator/Operator-Light.otf");
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: "Operator";
+  src: url("operator/Operator-Book.otf");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "Operator";
+  src: url("operator/Operator-Medium.otf");
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: "Operator";
+  src: url("operator/Operator-Bold.otf");
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: "Operator";
+  src: url("operator/Operator-Black.otf");
   font-weight: 700;
 }
 
